# myparcel

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/carriers/: dpd.md  evri.md  royal-mail.md
src/myparcel/: __init__.py  config.py  main.py
src/myparcel/api/: __init__.py  routes.py
src/myparcel/carriers/: __init__.py  base.py
src/myparcel/carriers/amazon_logistics/: __init__.py  carrier.yaml
src/myparcel/carriers/dpd/: __init__.py  carrier.yaml  tracker.py
src/myparcel/carriers/evri/: __init__.py  carrier.yaml  tracker.py
src/myparcel/carriers/royal_mail/: __init__.py  carrier.yaml  tracker.py
src/myparcel/db/: __init__.py  database.py  models.py
src/myparcel/services/: __init__.py  carrier_loader.py  tracker.py
src/myparcel/templates/: base.html  index.html  parcel_detail.html
static/css/: style.css
tests/: __init__.py  conftest.py  test_carrier_detection.py
tests/carriers/: __init__.py  test_base_carrier.py
